# pyMM

./: .bandit  .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.yml  .markdownlintignore  .pre-commit-ci.yaml.example  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOY.md  DEVELOPER.md  Dockerfile  LICENSE  Makefile  POST_REFACTORING_CHECKLIST.md  README.md  README_OLD.md  REFACTORING_SUMMARY.md  VSCode.code-workspace  justfile  launcher.py  pyproject.toml  requirements-frozen-py312.txt  requirements-frozen-py313.txt  requirements.txt  setup-github.ps1  test_git_integration.py  test_plugin_download.py  test_project_management.py  test_settings_dialog.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  DEPENDABOT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  REPOSITORY_CONFIGURATION.md  SECURITY.md  SUPPORT.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/hooks/: pre-commit  pre-push
.github/workflows/: README.md  build.yml  ci.yml  cleanup-beta-releases.yml  codeql.yml  dependabot-automerge.yml  dependabot-uv-lock-update.yml  docs.yml  labeler.yml  measure-baselines.yml  pre-commit-autoupdate.yml  release.yml  scorecard.yml  security.yml  semantic-release.yml  update-docs.yml
app/: __init__.py  main.py
app/core/: __init__.py  logging_service.py  platform.py
app/core/services/: __init__.py  config_service.py  file_system_service.py  storage_group_service.py  storage_service.py
app/core/sync/: __init__.py  advanced_sync_options.py  backup_tracking.py  bandwidth_throttler.py  crypto_compression.py  file_synchronizer.py  notifications.py  realtime_sync.py  scheduled_sync.py
app/models/: __init__.py  project.py  storage_group.py
app/platform/: __init__.py
app/platform/linux/: __init__.py  udev_installer.py
app/platform/macos/: __init__.py
app/platform/windows/: __init__.py
app/plugins/: __init__.py  plugin_base.py  plugin_manager.py  plugin_migrator.py  plugin_schema.py  system_tool_detector.py
app/projects/: __init__.py
app/services/: __init__.py  git_service.py  project_service.py
app/ui/: __init__.py  main_window.py
app/ui/components/: __init__.py  first_run_wizard.py  migration_banner.py
app/ui/dialogs/: __init__.py  advanced_sync_options_dialog.py  conflict_resolution_dialog.py  migration_dialog.py  privilege_dialog.py  project_browser.py  project_properties_dialog.py  project_wizard.py  rollback_dialog.py  settings_dialog.py  storage_group_dialog.py  sync_history_dialog.py  sync_progress_dialog.py  sync_schedule_dialog.py  tool_version_dialog.py
app/ui/views/: __init__.py  plugin_view.py  project_view.py  storage_view.py
config/: app.yaml  storage_groups.yaml.example  user.yaml.example
docs/: RELEASE-v0.1.0.md  api-reference.md  architecture.md  build-system.md  code-review-2026-01-04.md  conf.py  configuration.md  docker-ci-testing.md  features.md  getting-started-dev.md  getting-started.md  i18n-strategy.md  index.md  index.rst  installation.md  linux-setup.md  linux-udev-installer.md  macos-setup.md  migration-guide.md  platform-directories.md  plugin-catalog.md  plugin-development.md  plugin-preferences.md  project-status.md  refactoring-summary.md  release-verification.md  semantic-release.md  spelling_wordlist.txt  storage-groups.md  sync-engine.md  templates.md  testing-roadmap.md  testing-status.md  troubleshooting.md  user-guide.md  v0.1.0-plan.md  windows-setup.md
docs/_build/html/: .buildinfo  architecture.html  genindex.html  index.html  objects.inv  plugin-development.html  py-modindex.html  search.html  searchindex.js  (+1 more)
docs/_static/: custom.css
docs/_templates/: versioning.html
docs/api/: app.core.rst  app.core.services.rst  app.models.rst  app.plugins.rst  app.projects.rst  app.rst  app.services.rst  app.ui.components.rst  app.ui.dialogs.rst  app.ui.rst  app.ui.views.rst  core.rst  index.rst  ui.rst
docs/examples/: README.md
docs/research/: implementation-research.md
plugins/digikam/: plugin.yaml
plugins/exiftool/: plugin.yaml
plugins/ffmpeg/: plugin.yaml
plugins/git/: plugin.yaml
plugins/gitlfs/: plugin.yaml
plugins/gitversion/: plugin.yaml
plugins/imagemagick/: plugin.yaml
plugins/mariadb/: plugin.yaml
plugins/mkvtoolnix/: plugin.yaml
scripts/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_AUTO_UPDATE.md  build_distribution.py  build_linux.py  build_linux_appimage.py  build_macos.py  build_manager.py  build_windows.py  calculate_thresholds.py  convert_plugins_to_v2.py  get_release_tags.py  measure_performance_baseline.py  setup-git-hooks.ps1  setup-git-hooks.sh  setup_hooks.py  test_portable_build.py  update_plugin_catalog.py  update_readme_stats.py  validate_skip_ci.py  wix_generator.py  wix_template.wxs.j2
templates/base/: .gitignore  README.md  template.yaml
templates/default/: README.md  template.yaml
templates/photo-management/: README.md  template.yaml
templates/test/: README.md  template.yaml
templates/video-editing/: README.md  template.yaml
tests/: README.md  __init__.py  conftest.py  test_git_integration.py  test_plugin_download.py  test_project_management.py  test_settings_dialog.py
tests/docs/: test_plugin_catalog.py  test_sphinx_refs.py
tests/fixtures/: __init__.py  platform_data.py
tests/gui/: __init__.py  test_first_run_wizard.py  test_migration_ui.py  test_project_dialogs.py  test_tool_version_dialog.py  test_views.py
tests/integration/: __init__.py  test_entry_points.py  test_plugin_workflow.py  test_project_workflow.py  test_template_system.py
tests/unit/: test_config_service.py  test_file_system_service.py  test_git_service.py  test_logging_service.py  test_main.py  test_platform.py  test_platform_directories.py  test_platform_portable.py  test_plugin_base.py  test_plugin_manager.py  test_plugin_migrator.py  test_plugin_preferences.py  test_plugin_schema.py  test_project.py  test_storage_service.py  test_system_tool_detector.py  test_udev_installer.py  test_windows_storage.py
(+83 files in other folders)
