[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMediaManager"
dynamic = ["version"]
description = "Portable Python-based media management application with PySide6 Fluent UI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "mosh666", email = "24556349+mosh666@users.noreply.github.com"}
]
keywords = ["media-management", "portable", "digikam", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
]

dependencies = [
    "PySide6>=6.6.0",
    "PySide6-Fluent-Widgets>=1.5.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "GitPython>=3.1.0",
    "WMI>=1.5.1; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.3.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/mosh666/pyMM"
Repository = "https://github.com/mosh666/pyMM"
Issues = "https://github.com/mosh666/pyMM/issues"

[tool.setuptools]
packages = ["app"]

[tool.setuptools_scm]
version_file = "app/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
# Allow semantic versioning with optional alpha/beta/rc suffixes (e.g., v1.0.0-alpha.1)
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+(?:-[a-zA-Z0-9]+(?:\\.[0-9]+)?)?)$"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
    "-v",
]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests (may be slower, access filesystem/network)",
    "slow: Tests that may take significant time to complete",
    "ui: Tests that require GUI components",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/app/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"_version.py" = ["UP035", "UP006", "UP007", "I001"]  # Generated by setuptools-scm

[tool.black]
line-length = 100
target-version = ["py312", "py313", "py314"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
ignore_missing_imports = true
