[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMediaManager"
dynamic = ["version"]
description = "Portable Python-based media management application with PySide6 Fluent UI"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "mosh666", email = "24556349+mosh666@users.noreply.github.com"}
]
maintainers = [
    {name = "mosh666", email = "24556349+mosh666@users.noreply.github.com"}
]
keywords = [
    "media-management",
    "portable",
    "digikam",
    "pyside6",
    "fluent-ui",
    "plugin-system",
    "project-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "PySide6>=6.6.0",
    "PySide6-Fluent-Widgets>=1.5.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "GitPython>=3.1.0",
    "WMI>=1.5.1; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.3.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
pymediamanager = "launcher:main"

[project.urls]
Homepage = "https://github.com/mosh666/pyMM"
Repository = "https://github.com/mosh666/pyMM"
"Source Code" = "https://github.com/mosh666/pyMM"
"Bug Tracker" = "https://github.com/mosh666/pyMM/issues"
Issues = "https://github.com/mosh666/pyMM/issues"
"Pull Requests" = "https://github.com/mosh666/pyMM/pulls"
Discussions = "https://github.com/mosh666/pyMM/discussions"
Changelog = "https://github.com/mosh666/pyMM/blob/main/CHANGELOG.md"
Documentation = "https://github.com/mosh666/pyMM/blob/main/README.md"

[tool.setuptools]
packages = ["app"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.setuptools_scm]
version_file = "app/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
# Allow semantic versioning with optional alpha/beta/rc suffixes (e.g., v1.0.0-alpha.1)
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+(?:-[a-zA-Z0-9]+(?:\\.[0-9]+)?)?)$"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
    "-v",
]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests (may be slower, access filesystem/network)",
    "slow: Tests that may take significant time to complete",
    "ui: Tests that require GUI components",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/app/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py312"
output-format = "grouped"
show-fixes = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "YTT",  # flake8-2020
    "ASYNC", # flake8-async
    "S",    # flake8-bandit (security)
    "BLE",  # flake8-blind-except
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C90",  # mccabe complexity
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # perflint
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "S101",    # use of assert (common in tests)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "TRY003",  # long exception messages
    "EM101",   # raw string in exception
    "EM102",   # f-string in exception
    "G004",    # logging f-string
    "COM812",  # trailing comma missing (conflicts with formatter)
    "ISC001",  # implicit str concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"_version.py" = ["UP035", "UP006", "UP007", "I001"]  # Generated by setuptools-scm
"tests/**" = ["S101", "ARG", "PLR2004", "S105", "S106"]
"conftest.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py312", "py313", "py314"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
warn_redundant_casts = true
warn_unused_ignores = false
strict_equality = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = false
disallow_untyped_calls = false
