[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyMediaManager"
dynamic = ["version"]
description = "Portable Python-based media management application with PySide6 Fluent UI"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "mosh666", email = "24556349+mosh666@users.noreply.github.com"}
]
maintainers = [
    {name = "mosh666", email = "24556349+mosh666@users.noreply.github.com"}
]
keywords = [
    "media-management",
    "portable",
    "digikam",
    "pyside6",
    "fluent-ui",
    "plugin-system",
    "project-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "PySide6>=6.6.0",
    "PySide6-Fluent-Widgets>=1.5.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "GitPython>=3.1.0",
    "WMI>=1.5.1; platform_system=='Windows'",  # Windows drive detection via WMI
    "pyudev>=0.24.1; platform_system=='Linux'",  # Linux USB drive detection via udev
    "pyobjc-framework-DiskArbitration>=10.1; platform_system=='Darwin'",  # macOS drive enumeration
    "pyobjc-framework-Cocoa>=10.1; platform_system=='Darwin'",  # macOS native dialogs
    "py7zr>=0.20.0",
    "watchdog>=3.0.0",
    "APScheduler>=3.10.0",  # Scheduled sync support
    "cryptography>=41.0.0",  # Encryption support for backups
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.3.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "types-psutil>=5.9.0",
    "sphinx>=7.2.0,<8.0.0",
    "furo>=2024.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.5",
    "sphinx-design>=0.5.0",
    "sphinx-notfound-page>=1.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinxcontrib-spelling>=8.0.0",
    "sphinxcontrib-redirects>=0.2.0",
    "myst-parser>=2.0.0",
    "sphinx-multiversion>=0.2.4",
    "doc8>=1.1.1",
    "interrogate>=1.5.0",
]

build = [
    "jinja2>=3.1.0",  # For WiX MSI template rendering
]

[project.scripts]
pymm = "launcher:main"

[project.urls]
Homepage = "https://github.com/mosh666/pyMM"
Repository = "https://github.com/mosh666/pyMM"
"Source Code" = "https://github.com/mosh666/pyMM"
"Bug Tracker" = "https://github.com/mosh666/pyMM/issues"
Issues = "https://github.com/mosh666/pyMM/issues"
"Pull Requests" = "https://github.com/mosh666/pyMM/pulls"
Discussions = "https://github.com/mosh666/pyMM/discussions"
Changelog = "https://github.com/mosh666/pyMM/blob/main/CHANGELOG.md"
Documentation = "https://github.com/mosh666/pyMM/blob/main/README.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "app/_version.py"
template = """
# file generated by hatch-vcs
# don't change, don't track in version control

__all__ = [
    "__version__",
    "__version_tuple__",
    "version",
    "version_tuple",
    "__commit_id__",
    "commit_id",
]

TYPE_CHECKING = False
if TYPE_CHECKING:
    from typing import Tuple
    from typing import Union

    VERSION_TUPLE = Tuple[Union[int, str], ...]
    COMMIT_ID = Union[str, None]
else:
    VERSION_TUPLE = object
    COMMIT_ID = object

version: str
__version__: str
__version_tuple__: VERSION_TUPLE
version_tuple: VERSION_TUPLE
commit_id: COMMIT_ID
__commit_id__: COMMIT_ID

__version__ = version = '{version}'
__version_tuple__ = version_tuple = {version_tuple}

__commit_id__ = commit_id = None
"""

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--basetemp=.pytest_tmp",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=30",
    "-v",
]
# Use system temp directory for pytest temporary files instead of project root
tmp_path_retention_count = 0
tmp_path_retention_policy = "none"
asyncio_mode = "auto"
markers = [
    "integration: Integration tests (may be slower, access filesystem/network)",
    "slow: Tests that may take significant time to complete",
    "ui: Tests that require GUI components",
    "gui: GUI tests that use Qt widgets and dialogs",
    "windows: Tests that only run on Windows (composable with other platform markers)",
    "linux: Tests that only run on Linux (composable with other platform markers)",
    "macos: Tests that only run on macOS (composable with other platform markers)",
    "unix: Tests that run on Unix-like systems (Linux and macOS)",
    "docs: Documentation and plugin catalog tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/app/_version.py",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py312"
output-format = "grouped"
show-fixes = true
exclude = ["build", "dist", ".git", ".venv", "venv", ".env"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "YTT",  # flake8-2020
    "ASYNC", # flake8-async
    "S",    # Security checks
    "BLE",  # flake8-blind-except
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C90",  # mccabe complexity
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # perflint
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "S101",    # use of assert (common in tests)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "TRY003",  # long exception messages
    "EM101",   # raw string in exception
    "EM102",   # f-string in exception
    "G004",    # logging f-string
    "COM812",  # trailing comma missing (conflicts with formatter)
    "ISC001",  # implicit str concat (conflicts with formatter)
    "TRY300",  # consider moving to else block (current pattern is clearer)
    "S110",    # try-except-pass (intentional in some contexts)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"_version.py" = ["UP035", "UP006", "UP007", "I001", "RUF022", "Q000"]  # Generated by hatch-vcs
"tests/**" = ["S101", "ARG", "PLR2004", "S105", "S106", "SLF001", "BLE001", "PLC0415", "PTH123", "SIM102", "SIM117", "PT011"]
"conftest.py" = ["F401", "F403"]
"launcher.py" = ["PLC0415", "T201", "BLE001"]  # Launcher needs delayed imports and print for debugging
"app/main.py" = ["PLC0415", "PLR0915", "TC001"]  # Lazy imports for GUI and too many statements, PortableConfig used in function signatures
"app/ui/*.py" = ["PLC0415", "ARG", "BLE001", "PLR0915", "RUF001"]  # Qt signal arguments and GUI patterns, unicode for UI
"docs/examples/**" = ["T201", "BLE001", "E722", "TRY401", "C901", "ARG001", "PERF401"]  # Example scripts intentionally use print and simpler patterns
"docs/conf.py" = ["ERA001"]  # Documentation configuration with commented examples
"app/plugins/*.py" = ["BLE001", "PLC0415", "S603", "S607", "ASYNC230", "ASYNC221", "PTH123", "C901", "PLR0912", "TRY301", "TC003"]  # Plugin system needs broad exception handling and subprocess calls, runtime imports needed for signatures
"app/platform/linux/udev_installer.py" = ["S603", "S607"]  # Safe subprocess calls to system utilities
"app/core/platform.py" = ["A005", "N802"]  # Module name intentionally shadows stdlib; AST visitor methods require CamelCase naming
"app/core/services/storage_service.py" = ["N806", "PLC0415", "BLE001", "C901", "PLR0911", "SIM102"]  # Windows API requires specific naming
"app/core/services/storage_group_service.py" = ["PLC0415", "C901", "PLR0912", "PLR0915"]  # Lazy imports to avoid circular dependencies; comprehensive sync logic
"app/core/services/config_service.py" = ["PTH123"]  # Config uses standard open()
"app/core/sync/*.py" = ["PLC0415", "DTZ005", "DTZ006", "C901", "PLR0912", "PLR0915", "TRY301"]  # Sync module needs lazy imports, datetime for file operations, complex logic
"app/services/*.py" = ["PTH123", "BLE001", "DTZ005", "PERF401", "ARG002", "PLC0415", "TRY301"]  # Service layer patterns
"app/ui/dialogs/storage_group_dialog.py" = ["PLR0915", "SLF001"]  # Comprehensive UI setup; internal validation access
"app/ui/dialogs/sync_history_dialog.py" = ["PLR0915", "BLE001"]  # Comprehensive filter UI; broad catch for UI
"scripts/*.py" = ["T201", "S603", "S607", "RUF001", "BLE001"] # Scripts use print, subprocess, and simple logic

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
strict_equality = true
ignore_missing_imports = true
exclude = ["python3\\d+", "lib-py3\\d+", "build", "dist", "get-pip.py", "\\.venv", "venv", "\\.env"]

# Per-module overrides for gradual strict adoption
[[tool.mypy.overrides]]
module = [
    "app.ui.*",
    "app.ui.components.*",
    "app.ui.dialogs.*",
    "app.ui.views.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
disable_error_code = ["misc", "attr-defined"]

[[tool.mypy.overrides]]
module = "app.core.services.storage_service"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "app.main"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disable_error_code = ["no-untyped-def", "no-untyped-call", "union-attr", "index", "attr-defined"]

[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false
disable_error_code = ["assignment"]

[tool.semantic_release]
commit_message = "chore(release): {version} [skip ci]\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = false
tag_format = "v{version}"
build_command = "uv build"
# Disable version stamping - rely on hatch-vcs for dynamic versioning from git tags
ignore_token_for_push = false
# Explicitly specify files to commit during release
assets = ["CHANGELOG.md"]

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
# Explicitly configure parser behavior for v0.y.z enforcement
major_on_zero = false

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
fail-under = 100
exclude = ["setup.py", "docs", "build", "tests", "app/_version.py"]
ignore-regex = ["^get$", "^set$", "^setup$"]
ext = []
style = "sphinx"
color = true
omit-covered-files = false
generate-badge = "."
badge-format = "svg"
verbose = 2

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "rc"
prerelease = false
major_on_zero = false

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "beta"
major_on_zero = false

[tool.semantic_release.changelog]
mode = "update"
# Exclude commits that don't affect end users (matching pre-commit conventional-commits config)
exclude_commit_patterns = [
    "^chore(\\(.+\\))?: .+",
    "^ci(\\(.+\\))?: .+",
    "^refactor(\\(.+\\))?: .+",
    "^style(\\(.+\\))?: .+",
    "^test(\\(.+\\))?: .+",
    "^build(\\(.+\\))?: (?!deps).+",
    "^docs(\\(.+\\))?: .+",
    "^perf(\\(.+\\))?: .+",
    "^revert: .+",
    "^Merge branch .+",
    "^Merge pull request .+",
    "^Initial [Cc]ommit",
    "^\\[pre-commit\\.ci\\] .+",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.publish]
dist_glob = "dist/*"
upload_to_vcs_release = true
